force-app/main/default/objects/Calculation__c/Calculation__c.object-meta.xml
<CustomObject>
    <label>Immo Berechnung</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Immo Berechnung Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Immo Berechnungen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>