force-app/main/default/objects/Calculation__c/fields/Administrator_Costs_Pa__c.field-meta.xml
<CustomField>
    <fullName>Administrator_Costs_Pa__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Administrator Costs Pa</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>