force-app/main/default/objects/Calculation__c/fields/Annuity1__c.field-meta.xml
<CustomField>
    <fullName>Annuity1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Annuity1</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>