force-app/main/default/objects/Calculation__c/fields/Annuity__c.field-meta.xml
<CustomField>
    <fullName>Annuity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Annuity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>