force-app/main/default/objects/Calculation__c/fields/Appartment__c.field-meta.xml
<CustomField>
    <fullName>Appartment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Appartment</label>
    <referenceTo>Appartment__c</referenceTo>
    <relationshipName>Calculations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>