force-app/main/default/objects/Calculation__c/fields/Borrowing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Borrowing_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Borrowing Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>