force-app/main/default/objects/Calculation__c/fields/Brokers_Person__c.field-meta.xml
<CustomField>
    <fullName>Brokers_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brokers Person</label>
    <referenceTo>Realty_User__c</referenceTo>
    <relationshipName>Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>