force-app/main/default/objects/Calculation__c/fields/Calculation_Name__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Name__c</fullName>
    <defaultValue>&quot; &quot;</defaultValue>
    <label>Calculation Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>