force-app/main/default/objects/Calculation__c/fields/Church_Tax_Base__c.field-meta.xml
<CustomField>
    <fullName>Church_Tax_Base__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Church Tax Base</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>