force-app/main/default/objects/Calculation__c/fields/Commitment_Interest__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Interest__c</fullName>
    <label>Commitment Interest</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>