force-app/main/default/objects/Calculation__c/fields/Depreciation_Amount_Per_Annum__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_Amount_Per_Annum__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Depreciation Amount Per Annum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>