force-app/main/default/objects/Calculation__c/fields/Email_Maklerbetreuer__c.field-meta.xml
<CustomField>
    <fullName>Email_Maklerbetreuer__c</fullName>
    <label>Email Maklerbetreuer</label>
    <type>Email</type>
</CustomField>