force-app/main/default/objects/Calculation__c/fields/EmailUebergeordneterMakler__c.field-meta.xml
<CustomField>
    <fullName>EmailUebergeordneterMakler__c</fullName>
    <label>E-Mail übergeordneter Makler</label>
    <type>Email</type>
</CustomField>