force-app/main/default/objects/Calculation__c/fields/Equality__c.field-meta.xml
<CustomField>
    <fullName>Equality__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Equality</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>