force-app/main/default/objects/Calculation__c/fields/eXPVergut_Steig__c.field-meta.xml
<CustomField>
    <fullName>eXPVergut_Steig__c</fullName>
    <defaultValue>0</defaultValue>
    <label>eXPVergut Steig</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>