force-app/main/default/objects/Calculation__c/fields/eXPVergutSteig1__c.field-meta.xml
<CustomField>
    <fullName>eXPVergutSteig1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>eXPVergutSteig1</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>