force-app/main/default/objects/Calculation__c/fields/Financial_Verm_Fee1__c.field-meta.xml
<CustomField>
    <fullName>Financial_Verm_Fee1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Financial Verm Fee1</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>