force-app/main/default/objects/Calculation__c/fields/Financial_Verm_Fee__c.field-meta.xml
<CustomField>
    <fullName>Financial_Verm_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Financial Verm Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>