force-app/main/default/objects/Calculation__c/fields/Income_new__c.field-meta.xml
<CustomField>
    <fullName>Income_new__c</fullName>
    <description>Neues Einkommen ab Jahr &quot;Tax_new_Year&quot;</description>
    <label>Income_new</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>