force-app/main/default/objects/Calculation__c/fields/Income_new_tax__c.field-meta.xml
<CustomField>
    <fullName>Income_new_tax__c</fullName>
    <description>Einkommensteuer in % nach dem Jahr &quot;Tax_new_year&quot;</description>
    <label>Income_new_tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>