force-app/main/default/objects/Calculation__c/fields/Income_new_year__c.field-meta.xml
<CustomField>
    <fullName>Income_new_year__c</fullName>
    <description>Einkommen änderung ab diesem Jahr:
name im formular: 01.01.xxxx</description>
    <label>Income_new_year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>