force-app/main/default/objects/Calculation__c/fields/Income_To_Reinf__c.field-meta.xml
<CustomField>
    <fullName>Income_To_Reinf__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Income To Reinf</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>