force-app/main/default/objects/Calculation__c/fields/Internen_Maklerbetreuer__c.field-meta.xml
<CustomField>
    <fullName>Internen_Maklerbetreuer__c</fullName>
    <formula>TEXT(Brokers_Person__r.Contact__r.Account.Maklerbetreuer_Wirtschaftshaus__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internen Maklerbetreuer</label>
    <type>Text</type>
</CustomField>