force-app/main/default/objects/Calculation__c/fields/Loans__c.field-meta.xml
<CustomField>
    <fullName>Loans__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Loans</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>