force-app/main/default/objects/Calculation__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <defaultValue>&quot; &quot;</defaultValue>
    <label>Location</label>
    <length>45</length>
    <type>Text</type>
</CustomField>