force-app/main/default/objects/Calculation__c/fields/Maklercourtage_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Maklercourtage_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Maklercourtage ausrechnen</description>
    <inlineHelpText>Maklercourtage ausrechnen</inlineHelpText>
    <label>Maklercourtage Enabled</label>
    <type>Checkbox</type>
</CustomField>