force-app/main/default/objects/Calculation__c/fields/Marginal_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Marginal_Tax_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Marginal Tax Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>