force-app/main/default/objects/Calculation__c/fields/Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>Marital_Status__c</fullName>
    <label>Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
                <default>true</default>
                <label>Single</label>
            </value>
            <value>
                <fullName>Marreid</fullName>
            </value>
            <value>
                <fullName>Alleinstehend</fullName>
            </value>
            <value>
                <fullName>Verheiratet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>