force-app/main/default/objects/Calculation__c/fields/Notar_und_Gerichtskosten__c.field-meta.xml
<CustomField>
    <fullName>Notar_und_Gerichtskosten__c</fullName>
    <description>Notar u. Gerichtskosten
gerechnet inklusive möblierungskonzept</description>
    <formula>(Appartment__r.Purchase_Price__c
 + Appartment__r.Value_Parking_Space__c
 + Appartment__r.Value_Furniture__c
 + Wert_Moblierung__c)
 * Property__r.Notary_And_Court_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notar und Gerichtskosten</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>