force-app/main/default/objects/Calculation__c/fields/Ort_Immobilie__c.field-meta.xml
<CustomField>
    <fullName>Ort_Immobilie__c</fullName>
    <formula>Property__r.Place__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ort Immobilie</label>
    <type>Text</type>
</CustomField>