force-app/main/default/objects/Calculation__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipName>Calculations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>