force-app/main/default/objects/Calculation__c/fields/Rent_Increase__c.field-meta.xml
<CustomField>
    <fullName>Rent_Increase__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rent Increase</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>