force-app/main/default/objects/Calculation__c/fields/Rent_Increase_All__c.field-meta.xml
<CustomField>
    <fullName>Rent_Increase_All__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rent Increase All</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>