force-app/main/default/objects/Calculation__c/fields/Rent_Increase_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Rent_Increase_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rent Increase Enabled</label>
    <type>Checkbox</type>
</CustomField>