force-app/main/default/objects/Calculation__c/fields/Rent_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Rent_Per_Month__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rent Per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>