force-app/main/default/objects/Calculation__c/fields/Rental_Days_per_Year__c.field-meta.xml
<CustomField>
    <fullName>Rental_Days_per_Year__c</fullName>
    <description>Vermietungstage pro Jahr</description>
    <label>Rental Days per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>