force-app/main/default/objects/Calculation__c/fields/Rental_Service_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Rental_Service_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Kosten für Vermietungsservice wird angerechnet</description>
    <label>Rental Service Enabled</label>
    <type>Checkbox</type>
</CustomField>