force-app/main/default/objects/Calculation__c/fields/Repayment_Rate_Pa__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Rate_Pa__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Repayment Rate Pa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>