force-app/main/default/objects/Calculation__c/fields/Residential_Unit__c.field-meta.xml
<CustomField>
    <fullName>Residential_Unit__c</fullName>
    <defaultValue>&quot; &quot;</defaultValue>
    <label>Residential Unit</label>
    <length>45</length>
    <type>Text</type>
</CustomField>