force-app/main/default/objects/Calculation__c/fields/Starting__c.field-meta.xml
<CustomField>
    <fullName>Starting__c</fullName>
    <label>Starting</label>
    <required>true</required>
    <type>Date</type>
</CustomField>