force-app/main/default/objects/Calculation__c/fields/Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_Name__c</fullName>
    <defaultValue>&quot;  &quot;</defaultValue>
    <label>Store Name</label>
    <length>45</length>
    <type>Text</type>
</CustomField>