force-app/main/default/objects/Calculation__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <defaultValue>&quot; &quot;</defaultValue>
    <label>Street</label>
    <length>45</length>
    <type>Text</type>
</CustomField>