force-app/main/default/objects/Calculation__c/fields/Tilgungsaussetzung__c.field-meta.xml
<CustomField>
    <fullName>Tilgungsaussetzung__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag ob die berechnung mit Tilgungsaussetzung erfolgt</description>
    <label>Tilgungsaussetzung</label>
    <type>Checkbox</type>
</CustomField>