force-app/main/default/objects/Calculation__c/fields/Tilgungsaussetzung_ansparzeit_jahre__c.field-meta.xml
<CustomField>
    <fullName>Tilgungsaussetzung_ansparzeit_jahre__c</fullName>
    <description>Ansparzeit im Tilgungsaussetzung-Dialog, in ganzen Jahren</description>
    <label>Tilgungsaussetzung_ansparzeit_jahre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>