force-app/main/default/objects/Calculation__c/fields/Tilgungsaussetzung_sparrate__c.field-meta.xml
<CustomField>
    <fullName>Tilgungsaussetzung_sparrate__c</fullName>
    <description>Sparrate im Tilgungsaussetzungs-Dialog</description>
    <label>Tilgungsaussetzung_sparrate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>