force-app/main/default/objects/Calculation__c/fields/Tilgungsaussetzung_startguthaben__c.field-meta.xml
<CustomField>
    <fullName>Tilgungsaussetzung_startguthaben__c</fullName>
    <description>Anfangskapital im Tilgungsaussetzung Dialog</description>
    <label>Tilgungsaussetzung_startguthaben</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>