force-app/main/default/objects/Calculation__c/fields/Tilgungsaussetzung_zinssatz__c.field-meta.xml
<CustomField>
    <fullName>Tilgungsaussetzung_zinssatz__c</fullName>
    <description>Zinssatz im Tilgungsaussetzung-Dialog</description>
    <label>Tilgungsaussetzung_zinssatz</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>