force-app/main/default/objects/Calculation__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <defaultValue>&quot; &quot;</defaultValue>
    <label>Version</label>
    <length>45</length>
    <type>Text</type>
</CustomField>