force-app/main/default/objects/Calculation__c/fields/Wert_Moblierung__c.field-meta.xml
<CustomField>
    <fullName>Wert_Moblierung__c</fullName>
    <description>Möblierungskonzept, Wert der Möblierung
Brutto</description>
    <label>Wert Moblierung</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>