force-app/main/default/objects/Calculation__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <defaultValue>&quot; &quot;</defaultValue>
    <label>Zip Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>