force-app/main/default/objects/Calculation__c/listViews/Alle.listView-meta.xml
<ListView>
    <fullName>Alle</fullName>
    <columns>NAME</columns>
    <columns>Brokers_Person__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Property__c</columns>
    <columns>Appartment__c</columns>
    <columns>Grand_Total__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brokers_Person__c</field>
        <operation>equals</operation>
        <value>Andreas Pohl</value>
    </filters>
    <label>Alle</label>
</ListView>