force-app/main/default/objects/Calculation__c/listViews/Support_Calculation.listView-meta.xml
<ListView>
    <fullName>Support_Calculation</fullName>
    <filterScope>Queue</filterScope>
    <label>Support</label>
    <queue>Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>